<resources>

    <!-- Nome da aplicação -->
    <string name="app_name">ProjFinal</string>


    <!-- MENU PRINCIPAL -->
    <string name="tituloHorarios">Horários por QR Code</string>
    <string name="tituloSala">Lê o QR Code da sala de aula</string>
    <string name="irHorario">Horários Disponíveis</string>
    <string name="readQR">Ler QR Code</string>
    <string name="sobre">Sobre a App</string>
    <string name="voltar">Voltar</string>


    <!-- SELECIONAR HORÁRIO -->
    <string name="ano">Ano</string>
    <string name="curso">Curso</string>
    <string name="ir_horario">Ir para Horário</string>

    <string name="toast_ano">Ano: %1$s</string>
    <string name="toast_curso">Curso: %1$s</string>
    <string name="erro_campos">Por favor, preencha todos os campos</string>


    <!-- SELECIONAR SALA -->
    <string name="ir_sala">Ver Sala</string>


    <!-- QR CODE / CÂMARA -->
    <string name="qr_invalido">QR Code inválido</string>
    <string name="sala_detectada">Sala detetada: %1$s</string>
    <string name="permissao_negada">Permissão negada</string>


    <!-- HORÁRIOS -->
    <string name="horariosTitulo">Horários Disponíveis</string>
    <string name="horarios_ErroHorario">Nenhum Horário</string>
    <string name="clearTable">Limpar</string>
    <string name="horario_carregado">Carregado: %1$s</string>
    <string name="ficheiro_nao_encontrado">Ficheiro não encontrado: %1$s</string>
    <string name="erro_carregar_horario">Erro ao carregar horário</string>
    <string name="tabela_vazia">Tabela vazia</string>
    <string name="tabela_limpa">Tabela limpa</string>



    <!-- cam_activity -->
    <string name="cam_sala">Sala: %1$s</string>
    <string name="cam_erroQR">Erro ao processar QR Code</string>
    <string name="cam_codigoSala">Código da sala: %1$s</string>
    <string name="cam_qrInvalido">Código Inválido</string>
    <string name="cam_erroSala">Erro na sala: %1$s: %2$s</string>
    <string name="cam_QRInvaldio">QR code Invalido</string>

    <!-- regitsar.xml strings -->
    <string name="registar_erro_PrencherCampos">Preencha todos os campos</string>
    <string name="registar_erro_EmailErrado">Email inválido</string>
    <string name="registar_erro_Password">A password deve ter pelo menos 4 caracteres</string>
    <string name="registar_erro_PasswordDiferente">As passwords não coincidem</string>


    <!-- activity.xml strings -->

    <string name="activity_login_BemVindo">Bem-vindo</string>
    <string name="activity_login_Email">Email</string>
    <string name="activity_login_Password">Password</string>
    <string name="activity_login_Entrar">Entrar</string>
    <string name="activity_login_Registar">Registar</string>


    <string name="continuar_como_convidado">Convidado</string>

</resources>
